env-authorization/src/main/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: env-authorization
  name: env-authorization
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: env-authorization
  template:
    metadata:
      name: env-authorization
      labels:
        app.kubernetes.io/name: env-authorization
    spec:
      containers:
        - name: env-authorization-container
          image: image-registry.local:5000/env-authorization:latest
          volumeMounts:
            - name: volume-secret-env-authorization
              mountPath: /etc/secret
      volumes:
        - name: volume-secret-env-authorization
          secret:
            secretName: env-authorization
      serviceAccountName: env-authorization-sa
