env-authorization/src/main/k8s/deployment-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: env-authorization
  name: env-authorization
  labels:
    #
    sba-client: "true"
    # pass metadata to sba
    user.name: env-authorization
    user.password: env-authorization
    management.port: "7000"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: env-authorization
  ports:
    - port: 8000
